# cours_work_5_HH

./: .env.exemple  README.md  pyproject.toml
src/: database.py  db_manager.py  main.py  utils.py
