[tool.poetry]
name = "cours-work-5-hh"
version = "0.1.0"
description = ""
authors = ["evgeniy <evgeniy.igorevich9402@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
